--- a/package.json
+++ b/package.json
@@ -14,14 +14,14 @@
     "react": "*",
     "react-dom": "*",
     "react-bootstrap": "*",
-    "express": "*"
-  },
-  "devDependencies": {
+    "express": "*",
     "babel-core": "*",
     "babel-loader": "*",
     "babel-preset-es2015": "*",
     "babel-preset-react": "*",
     "copy-webpack-plugin": "*",
     "webpack": "*"
+  },
+  "devDependencies": {
   }
 }
